# poetry-monoranger-plugin

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: main.yml  python-tests.yml  release.yml
poetry_monoranger_plugin/: __init__.py  config.py  export_modifier.py  lock_modifier.py  monorepo_adder.py  path_dep_pinner.py  path_rewriter.py  plugin.py  venv_modifier.py
tests/: conftest.py  helpers.py  test_commands.py  test_import.py  test_lock_modifier.py  test_monorepo_adder.py  test_path_dep_pinner.py  test_path_rewriter.py  test_plugin.py  test_venv_modifier.py
tests/fixtures/v1/: pyproject.toml
tests/fixtures/v1/pkg_one/: pyproject.toml
tests/fixtures/v1/pkg_three/: pyproject.toml
tests/fixtures/v1/pkg_two/: pyproject.toml
tests/fixtures/v1_v2lock/: pyproject.toml
tests/fixtures/v1_v2lock/pkg_one/: pyproject.toml
tests/fixtures/v1_v2lock/pkg_three/: pyproject.toml
tests/fixtures/v1_v2lock/pkg_two/: pyproject.toml
tests/fixtures/v2/: pyproject.toml
tests/fixtures/v2/pkg_one/: pyproject.toml
tests/fixtures/v2/pkg_three/: pyproject.toml
tests/fixtures/v2/pkg_two/: pyproject.toml
