[tool.poetry]
name = "v1"
version = "0.1.0"
description = ""
authors = ["Example <example@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pkg-one = { path = 'pkg_one', develop = true }
pkg-two = { path = 'pkg_two', develop = true }
pkg-three = { path = 'pkg_three', develop = true }

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
