[tool.poetry]
name = "pkg-one"
version = "0.1.0"
description = ""
authors = ["Example <example@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

# A list of all the optional dependencies, some of which are included in the
# below `extras`. They can be opted into by apps.
fsspec = { version = "^2024.12.0", optional = true }

[tool.poetry.extras]
withfsspec = ["fsspec"]

[tool.poetry-monoranger-plugin]
enabled = true
monorepo-root = "../"
version-pinning-rule = '=='

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
