[project]
name = "pkg-three"
version = "0.1.0"
description = ""
authors = [
    {name = "Example Example",email = "example@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pkg-one"
]

[tool.poetry-monoranger-plugin]
enabled = true
monorepo-root = "../"
version-rewrite-rule = '=='

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
pkg-one = {path = "../pkg_one", develop = true, extras = ["withfsspec"]}
