[project]
name = "pkg-two"
version = "0.1.0"
description = ""
authors = [
    {name = "Example Example",email = "example@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "tqdm (>=4.67.1,<5.0.0)"
]

[tool.poetry]
requires-poetry = ">=2.0.0,<3.0.0"

[tool.poetry-monoranger-plugin]
enabled = true
monorepo-root = "../"
version-pinning-rule = '=='

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
